# dbmi-fileservice

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  buildspec.yml  cookietest.py  dev-requirements.in  dev-requirements.txt  hms_saml_login.py  package-lock.json  pyproject.toml  requirements.in  requirements.txt  requirements_old.txt  sonar-project.properties  test-requirements.txt
.github/workflows/: requirements-update.yml  test.yml
deploy/: app.conf  bamboo.ci.sh  development.json  elasticsearch_ci.json  elasticsearch_ci.yaml  elasticsearch_prod.json  elasticsearch_prod.yaml  fileservice_ci.json  fileservice_ci.yaml  fileservice_prod.json  fileservice_prod.yaml  gunicorn-nginx-entry.sh
fileservice/: manage.py  test2.txt
fileservice/cli/: MANIFEST.in  README.md  fileservice.cfg.example  setup.py  test.json  test_bad.json
fileservice/cli/fileservice/: auth.py  files.py  main.py  udn.py  utils.py
fileservice/filemaster/: __init__.py  admin.py  apps.py  authenticate.py  aws.py  files.py  filters.py  glacier.py  healthcheck.py  models.py  permissions.py  realignment.py  search_indexes.py  serializers.py  service_tests.py  tasks.py  tests.py  uploader.py  urls.py  views.py
fileservice/filemaster/fixtures/: initial_data.json
fileservice/fileservice/: celery.py  environment.py  logging_middleware.py  settings.py  settings.py.old  test_settings.py  urls.py  view.py  views.py  wsgi.py  wsgi_docker.py  wsgi_local.py  wsgi_production.py
requirements/: constraints.txt  requirements-test.txt  requirements.txt
(+43 files in other folders)
